package name changes, jdk updates